[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainlink-memory"
version = "0.1.0"
description = "Find connections your vector search misses. Chain-aware memory for AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Akeel Mohammed", email = "akeel.m96@gmail.com"},
]
keywords = ["ai", "memory", "agent", "chain", "reasoning", "vector", "search", "rag", "llm", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.40.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
server = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "pydantic>=2.0.0"]
all = ["mcp>=1.0.0", "fastapi>=0.115.0", "uvicorn>=0.30.0", "pydantic>=2.0.0"]

[project.scripts]
chainlink-mcp = "chainlink_memory.mcp_server:cli_entry"

[project.urls]
Homepage = "https://github.com/akeelm96/chainlink"
Repository = "https://github.com/akeelm96/chainlink"
Issues = "https://github.com/akeelm96/chainlink/issues"

[tool.setuptools.packages.find]
include = ["chainlink_memory*"]
